--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
             <ul>
                 <li><a id="why_SNL" href="index.html#why">Why SNL</a></li>
                 <li><a id="solutions" href="#solutions">Our solutions</a></li>
-                <li><a id="about" href="about.html">About us</a></li>
+                <li><a id="about" href="about.hmtl">About us</a></li>
                 <li><a id="career" href="#careers">Careers</a></li>
                 <li><a id="contact" href="contact.html">Contact</a></li>
             </ul>
@@ -41,15 +41,15 @@
             </div>
         </div>
     </nav>
-    
+
     <div class="main-content">
-        <section id="contact" class="contact">
+        <section id="aboutus" class="aboutus">
             <div class="container">
-                <h1><span>Contact</span></h1>
-                <p>(+387) 66 794 308</p>
+                <h1><span>About us</span></h1>
+                <p>We are...</p>
             </div>    
-        </section>  
-    </div>
+        </section> 
+    </div> 
         
     <footer>
         <div class="footer-container">
