Contact and about us pages

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         <div class="navbar-center">
             <ul>
                 <li><a id="why_SNL" href="index.html#why">Why SNL</a></li>
-                <li><a id="solutions" href="#solutions">Our solutions</a></li>
+                <li><a id="solutions" href="index.html#solution">Our solutions</a></li>
                 <li><a id="about" href="about.hmtl">About us</a></li>
                 <li><a id="career" href="#careers">Careers</a></li>
                 <li><a id="contact" href="contact.html">Contact</a></li>
@@ -42,13 +42,24 @@
         </div>
     </nav>
 
-    <div class="main-content">
+    <div class="main-content-about">
         <section id="aboutus" class="aboutus">
-            <div class="container">
-                <h1><span>About us</span></h1>
-                <p>We are...</p>
-            </div>    
-        </section> 
+            <div class="content-box">
+                <h1 id="about_h"><span>About Us</span></h1>
+                <p id="about_p">
+                    Speednet Logistics d.o.o. is a logistics company based in Bijeljina, specializing in road freight transport. 
+                    We provide reliable and efficient transportation services across Bosnia and Herzegovina and the region, 
+                    ensuring the safe and timely delivery of various types of cargo. In addition to road transport, we offer 
+                    different transport solutions tailored to our clients' needs, including combined and specialized transport. 
+                    Our team of experienced professionals and a modern transport fleet guarantee high-quality service and customer satisfaction. 
+                    Contact us for a safe and fast solution to your logistics needs!
+                </p>
+            </div>
+        </section>
+
+        <div class="image-box">
+            <img src="images/aboutus.png" alt="aboutus-img">
+        </div>
     </div> 
         
     <footer>
