--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         <div class="navbar-center">
             <ul>
                 <li><a id="why_SNL" href="index.html#why">Why SNL</a></li>
-                <li><a id="solutions" href="#solutions">Our solutions</a></li>
+                <li><a id="solutions" href="index.html#solution">Our solutions</a></li>
                 <li><a id="about" href="about.html">About us</a></li>
                 <li><a id="career" href="#careers">Careers</a></li>
                 <li><a id="contact" href="contact.html">Contact</a></li>
@@ -42,13 +42,19 @@
         </div>
     </nav>
     
-    <div class="main-content">
+    <div class="main-content-contact">
         <section id="contact" class="contact">
-            <div class="container">
+            <div class="content-box">
                 <h1><span>Contact</span></h1>
-                <p>(+387) 66 794 308</p>
+                <p style="color: white;">If you have any questions or inquiries, feel free to reach out to us. We're here to help!</p>  
+                <p>Phone: (+387) 66 794 308</p>  
+                <p>Email: speednetlog@gmail.com</p>  
             </div>    
-        </section>  
+        </section>
+
+        <div class="image-box">
+            <img src="images/contactimg.png" alt="contact-img">
+        </div>
     </div>
         
     <footer>
