--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <ul>
                 <li><a id="why_SNL" href="#why">Why SNL</a></li>
                 <li><a id="solutions" href="#solution">Our solutions</a></li>
-                <li><a id="about" href="#aboutus">About us</a></li>
+                <li><a id="about" href="about.html">About us</a></li>
                 <li><a id="career" href="#careers">Careers</a></li>
                 <li><a id="contact" href="contact.html">Contact</a></li>
             </ul>
@@ -174,11 +174,6 @@
                     </div>
                 </div>
             </div>
-        </section>        
-
-        <section id="aboutus" class="aboutus">
-
-
         </section>
     </div>
 
