Career html creation

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                 <li><a id="why_SNL" href="index.html#why">Why SNL</a></li>
                 <li><a id="solutions" href="index.html#solution">Our solutions</a></li>
                 <li><a id="about" href="about.hmtl">About us</a></li>
-                <li><a id="career" href="#careers">Careers</a></li>
+                <li><a id="career" href="career.html">Career</a></li>
                 <li><a id="contact" href="contact.html">Contact</a></li>
             </ul>
         </div>
