--- a/career.html
+++ b/career.html
@@ -42,18 +42,16 @@
         </div>
     </nav>
     
-    <div class="main-content-contact">
-        <section id="contact" class="contact">
+    <div class="main-content-careers">
+        <section id="careers" class="careers">
             <div class="content-box">
-                <h1><span>Contact</span></h1>
-                <p style="color: white;">If you have any questions or inquiries, feel free to reach out to us. We're here to help!</p>  
-                <p>Phone: (+387) 66 794 308</p>  
-                <p>Email: speednetlog@gmail.com</p>  
+                <h1><span>Career</span></h1>
+                <p>Career</p>  
             </div>    
         </section>
 
         <div class="image-box">
-            <img src="images/contactimg.png" alt="contact-img">
+            <img src="images/careerimg.png" alt="career-img">
         </div>
     </div>
         
