--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <li><a id="why_SNL" href="#why">Why SNL</a></li>
                 <li><a id="solutions" href="#solution">Our solutions</a></li>
                 <li><a id="about" href="about.html">About us</a></li>
-                <li><a id="career" href="#careers">Careers</a></li>
+                <li><a id="career" href="career.html">Career</a></li>
                 <li><a id="contact" href="contact.html">Contact</a></li>
             </ul>
         </div>
