Career creating, scripts.js deleting unecessary

--- a/about.html
+++ b/about.html
@@ -65,7 +65,10 @@
     <footer>
         <div class="footer-container">
             <div class="footer-left">
-                <span><a>(+387) 66 794 308</a></span>
+                <span><a href="tel:+38766794308">(+387) 66 794 308</a></span>
+            </div>
+            <div class="footer-center">
+                <a>2025 SpeedNet Logistics®</a>
             </div>
             <div class="footer-right">
                 <!-- <a>Website made by</a>
