--- a/career.html
+++ b/career.html
@@ -45,8 +45,10 @@
     <div class="main-content-careers">
         <section id="careers" class="careers">
             <div class="content-box">
-                <h1><span>Career</span></h1>
-                <p>Career</p>  
+                <h1 id="cariera_h"><span>Career</span></h1>
+                <p id="cariera_p1">Looking for a new employment opportunity? Join our team!</p>
+                <p id="cariera_p2">For available positions, contact us at:</p>                
+                <a id="cariera_mail" href="mailto:speednetlog-career@gmail.com">Email: speednetlog-career@gmail.com</a>  
             </div>    
         </section>
 
@@ -58,7 +60,10 @@
     <footer>
         <div class="footer-container">
             <div class="footer-left">
-                <span><a>(+387) 66 794 308</a></span>
+                <span><a href="tel:+38766794308">(+387) 66 794 308</a></span>
+            </div>
+            <div class="footer-center">
+                <a>2025 SpeedNet Logistics®</a>
             </div>
             <div class="footer-right">
                 <!-- <a>Website made by</a>
