--- a/contact.html
+++ b/contact.html
@@ -45,10 +45,10 @@
     <div class="main-content-contact">
         <section id="contact" class="contact">
             <div class="content-box">
-                <h1><span>Contact</span></h1>
-                <p style="color: white;">If you have any questions or inquiries, feel free to reach out to us. We're here to help!</p>  
-                <p>Phone: (+387) 66 794 308</p>  
-                <p>Email: speednetlog@gmail.com</p>  
+                <h1 id="contact_h"><span>Contact</span></h1>
+                <p id="contact_p">If you have any questions or inquiries, feel free to reach out to us. We're here to help!</p>
+                <a id="contact_tel" href="tel:+38766794308">Phone: (+387) 66 794 308</a>  
+                <a id="contact_mail" href="mailto:speednetlog@gmail.com">Email: speednetlog@gmail.com</a>  
             </div>    
         </section>
 
@@ -60,7 +60,10 @@
     <footer>
         <div class="footer-container">
             <div class="footer-left">
-                <span><a>(+387) 66 794 308</a></span>
+                <span><a href="tel:+38766794308">(+387) 66 794 308</a></span>
+            </div>
+            <div class="footer-center">
+                <a>2025 SpeedNet Logistics®</a>
             </div>
             <div class="footer-right">
                 <!-- <a>Website made by</a>
