--- a/index.html
+++ b/index.html
@@ -17,23 +17,6 @@
 <body>
     <div id="loader"></div>
 
-    <!-- <section id="top">
-        <div class="top-bar">
-            <div class="top-left">
-                <span><a>(+387) 66 794 308</a></span>
-                <span><a href="mailto:speednetlog@gmail.com" class="email-link">speednetlog@gmail.com</a></span>
-            </div>
-            <div class="top-right">
-               <a href="#"><img src="images/facebook-icon.png" alt="Facebook" class="social-icon"></a>
-                <a href="https://www.instagram.com/agnesededonatis/" target="_blank"><img src="images/instagram-icon.png" alt="Instagram" class="social-icon"></a>
-                <a href="#"><img src="images/italian-flag.png" alt="Italian" class="language-icon" id="italian-icon"></a>
-            </div>
-        </div>
-    </section> -->
-
-    <!--<div class="scroll-wrapper">
-        <div class="scroll-arrow scroll-up"></div>
-            <div class="scroll-content"> -->
     <nav id="nav" class="navbar">
         <div class="navbar-left">
             <a href="javascript:void(0);" onclick="openPage('index.html');"><img src="images/logo.png" alt="Logo" class="navbar-logo"></a>
@@ -180,7 +163,10 @@
     <footer>
         <div class="footer-container">
             <div class="footer-left">
-                <span><a>(+387) 66 794 308</a></span>
+                <span><a href="tel:+38766794308">(+387) 66 794 308</a></span>
+            </div>
+            <div class="footer-center">
+                <a>2025 SpeedNet Logistics®</a>
             </div>
             <div class="footer-right">
                 <!-- <a>Website made by</a>
