--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="author" content="David Reba">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>SNL Contact</title>
+    <title id="zagl_abus">SNL About us</title>
     <link rel="icon" type="image/png" sizes="32x32" href="images/logoW.png">
     <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
@@ -25,7 +25,7 @@
             <ul>
                 <li><a id="why_SNL" href="index.html#why">Why SNL</a></li>
                 <li><a id="solutions" href="index.html#solution">Our solutions</a></li>
-                <li><a id="about" href="about.hmtl">About us</a></li>
+                <li><a id="about" href="about.html">About us</a></li>
                 <li><a id="career" href="career.html">Career</a></li>
                 <li><a id="contact" href="contact.html">Contact</a></li>
             </ul>
