--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta name="author" content="David Reba">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>SNL Contact</title>
+    <title id="zagl_con">SNL Contact</title>
     <link rel="icon" type="image/png" sizes="32x32" href="images/logoW.png">
     <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
