Mostly styles.css updating

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,9 @@
                 <h1 id="contact_h"><span>Contact</span></h1>
                 <p id="contact_p">If you have any questions or inquiries, feel free to reach out to us. We're here to help!</p>
                 <a id="contact_tel" href="tel:+38766794308">Phone: (+387) 66 794 308</a>  
-                <a id="contact_mail" href="mailto:speednetlog@gmail.com">Email: speednetlog@gmail.com</a>  
+                <a id="contact_mail" href="mailto:speednetlog@gmail.com">Email: speednetlog@gmail.com</a>
+                <a id="contact_addr"href="https://maps.app.goo.gl/gTQ72WN4UNa5DYbS6" target="_blank" style="color: white; text-decoration: none;">
+                    Address: Kneza Miloša 8/2, Bijeljina, BiH</a>
             </div>    
         </section>
 
