--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <div class="solution-item">
                         <img src="images/courier.png" alt="Courier">
                         <h2 id="courier_h">Courier</h2>
-                        <p id="courier_p">When it's urgent and you need something delivered fast</p>
+                        <p id="courier_p">It's urgent and you need something delivered fast</p>
                     </div>
                 </div>
             </div>
