Lenis fix and menu toggle

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="SNL website">
-    <meta name="keywords" content="logistics, transport, europe, bosnia, bijeljina">
+    <meta name="keywords" content="speednet logistics, speed net logistics, speednetlogistics, speednet, speed net, logistics, transport, europe, bosnia, bijeljina">
     <meta name="author" content="David Reba">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Roboto&display=swap" rel="stylesheet">
+	
+    <script src="https://unpkg.com/lenis@1.2.3/dist/lenis.min.js"></script> 
 </head>
 <body>
     <div id="loader"></div>
@@ -225,8 +227,8 @@
         const loader = document.getElementById("loader");
         loader.classList.add("hidden");
         });
-    </script> 
-    <script src="./scripts.js"></script>
+    </script>
     <script src="./languages.js"></script>
+    <script src="./scripts.js"></script>
 </body> 
 </html>
