--- a/about.html
+++ b/about.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Roboto&display=swap" rel="stylesheet">
+	
+	<script src="https://unpkg.com/lenis@1.2.3/dist/lenis.min.js"></script> 
 </head>
 <body>
     <div id="loader"></div>
