--- a/404.html
+++ b/404.html
@@ -7,17 +7,23 @@
     <script>
         // Redirect based on the URL path
         const redirectMap = {
-            "/home": "index.html",
-            "/about-us": "about.html",
-            "/contact": "contact.html",
-            "/career": "career.html"
+            "/": 'https://speednetlogistics.com/index.html',
+            "/home": "https://speednetlogistics.com/index.html",
+            "/why-snl": 'https://speednetlogistics.com/index.html#why',
+            "/our-solutions": 'https://speednetlogistics.com/index.html#solution',
+            "/about-us": "https://speednetlogistics.com/about.html",
+            "/contact": "https://speednetlogistics.com/contact.html",
+            "/career": "https://speednetlogistics.com/career.html"
         };
 
+        // Get the current path
         const path = window.location.pathname;
 
-        // If path matches one in the map, redirect to the corresponding HTML file
-        if (redirectMap[path]) {
-            window.location.replace(redirectMap[path]);
+        // Redirect to the mapped page or the 404 page
+        if (pageMapping[path]) {
+            window.location.href = pageMapping[path];
+        } else {
+            document.body.innerHTML = '<h1>404 Page Not Found</h1>';
         }
     </script>
 </head>
