--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         // Create a function that handles the dynamic routing based on the path
         function loadPage(page) {
             const pages = {
-                "/": 'https://speednetlogistics.com/index.html',
-				"/home": "https://speednetlogistics.com/index.html",
-				"/why-snl": 'https://speednetlogistics.com/index.html#why',
-				"/our-solutions": 'https://speednetlogistics.com/index.html#solution',
-				"/about-us": "https://speednetlogistics.com/about.html",
-				"/contact": "https://speednetlogistics.com/contact.html",
-				"/career": "https://speednetlogistics.com/career.html"
+                '/': 'https://speednetlogistics.com/index.html',
+				'/home': 'https://speednetlogistics.com/index.html',
+				'/why-snl': 'https://speednetlogistics.com/index.html#why',
+				'/our-solutions': 'https://speednetlogistics.com/index.html#solution',
+				'/about-us': 'https://speednetlogistics.com/about.html',
+				'/contact': 'https://speednetlogistics.com/contact.html',
+				'/career': 'https://speednetlogistics.com/career.html'
             };
 
             // Check if the page exists, otherwise load 404 page
