--- a/about.html
+++ b/about.html
@@ -106,23 +106,25 @@
                 </div>
                 <div class="footer-right">
                     <!-- <a>Website made by</a>
-                    <span><a href="mailto:reba@hotmail.com" class="email-link">reba@hotmail.com</a></span> -->                
-                    <span><a href="mailto:speednetlog@gmail.com" class="email-link">speednetlog@gmail.com</a></span>
+                    <span><a href="mailto:reba@hotmail.com" class="email-link">reba@hotmail.com</a></span>               
+                    <span><a href="mailto:speednetlog@gmail.com" class="email-link">speednetlog@gmail.com</a></span> -->
+                    <a id="contact_addr"href="https://maps.app.goo.gl/gTQ72WN4UNa5DYbS6" target="_blank" style="color: white; text-decoration: none;">Address: Kneza Miloša 8/2, Bijeljina, BiH</a>
                 </div>
             </div>
 
             <!-- Mobile Version -->
             <div class="footer-mobile">
-                <div class="footer-bottom">
-                    <a href="tel:+38766794308" class="footer-left">+387&nbsp;66&nbsp;794&nbsp;308</a>
-                    <a href="mailto:speednetlog@gmail.com" class="footer-right email-link">speednetlog@gmail.com</a>
+                <div class="footer-center">
+                    <!-- <a href="tel:+38766794308" class="footer-left">+387&nbsp;66&nbsp;794&nbsp;308</a> -->
+                    <a href="tel:+38766794308">+387&nbsp;66&nbsp;794&nbsp;308</a>
+                    <!-- <a href="mailto:speednetlog@gmail.com" class="footer-right email-link">speednetlog@gmail.com</a> -->
                 </div>
                 <div class="footer-center">
                     <a style="color:#f6e277; font-size: 14px;">2025 SpeedNet Logistics®</a>
                 </div>
             </div>
         </div>
-    </footer>        
+    </footer>      
     
     <script>
         window.addEventListener("load", function () {
