--- a/career.html
+++ b/career.html
@@ -80,9 +80,17 @@
             <div class="content-box">
                 <h1 id="cariera_h"><span>Career</span></h1>
                 <p id="cariera_p1">Looking for a new employment opportunity? Join our team!</p>
-                <p id="cariera_p2">For available positions, contact us at:</p>                
-                <a id="cariera_mail" href="mailto:speednetlog-career@gmail.com">Email: speednetlog-career@gmail.com</a>  
-            </div>    
+                <p id="cariera_p2">For available positions, contact us!</p>                
+                <!-- <a id="cariera_mail" href="mailto:speednetlog-career@gmail.com">Email: speednetlog-career@gmail.com</a>  
+            </div>
+			
+			<!-- Contact Form -->
+			<form class="contact-form" action="https://formspree.io/f/mjkykjjb" method="POST">
+				<input type="email" id="contact_req_email" name="email" placeholder="Your e-mail" required>
+				<input type="text" id="contact_req_subject" name="subject" placeholder="Subject" required>
+				<textarea id="contact_req_message" name="message" placeholder="Your message" required></textarea>
+				<button id="send_button" type="submit">Send</button>
+			</form>	
         </section>
 
         <div class="image-box">
@@ -102,23 +110,25 @@
                 </div>
                 <div class="footer-right">
                     <!-- <a>Website made by</a>
-                    <span><a href="mailto:reba@hotmail.com" class="email-link">reba@hotmail.com</a></span> -->                
-                    <span><a href="mailto:speednetlog@gmail.com" class="email-link">speednetlog@gmail.com</a></span>
+                    <span><a href="mailto:reba@hotmail.com" class="email-link">reba@hotmail.com</a></span>               
+                    <span><a href="mailto:speednetlog@gmail.com" class="email-link">speednetlog@gmail.com</a></span> -->
+                    <a id="contact_addr"href="https://maps.app.goo.gl/gTQ72WN4UNa5DYbS6" target="_blank" style="color: white; text-decoration: none;">Address: Kneza Miloša 8/2, Bijeljina, BiH</a>
                 </div>
             </div>
 
             <!-- Mobile Version -->
             <div class="footer-mobile">
-                <div class="footer-bottom">
-                    <a href="tel:+38766794308" class="footer-left">+387&nbsp;66&nbsp;794&nbsp;308</a>
-                    <a href="mailto:speednetlog@gmail.com" class="footer-right email-link">speednetlog@gmail.com</a>
+                <div class="footer-center">
+                    <!-- <a href="tel:+38766794308" class="footer-left">+387&nbsp;66&nbsp;794&nbsp;308</a> -->
+                    <a href="tel:+38766794308">+387&nbsp;66&nbsp;794&nbsp;308</a>
+                    <!-- <a href="mailto:speednetlog@gmail.com" class="footer-right email-link">speednetlog@gmail.com</a> -->
                 </div>
                 <div class="footer-center">
                     <a style="color:#f6e277; font-size: 14px;">2025 SpeedNet Logistics®</a>
                 </div>
             </div>
         </div>
-    </footer>         
+    </footer>       
     
     <script>
         window.addEventListener("load", function () {
