--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Roboto&display=swap" rel="stylesheet">
 	
-	<script src="https://unpkg.com/lenis@1.2.3/dist/lenis.min.js"></script> 
+	<script src="https://unpkg.com/lenis@1.2.3/dist/lenis.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </head>
 <body>
     <div id="loader"></div>
@@ -79,11 +80,19 @@
             <div class="content-box">
                 <h1 id="contact_h"><span>Contact</span></h1>
                 <p id="contact_p">If you have any questions or inquiries, feel free to reach out to us. We're here to help!</p>
-                <a id="contact_tel" href="tel:+38766794308">Phone: (+387) 66 794 308</a>  
+                <!-- <a id="contact_tel" href="tel:+38766794308">Phone: (+387) 66 794 308</a>  
                 <a id="contact_mail" href="mailto:speednetlog@gmail.com">Email: speednetlog@gmail.com</a>
                 <a id="contact_addr"href="https://maps.app.goo.gl/gTQ72WN4UNa5DYbS6" target="_blank" style="color: white; text-decoration: none;">
-                    Address: Kneza Miloša 8/2, Bijeljina, BiH</a>
-            </div>    
+                    Address: Kneza Miloša 8/2, Bijeljina, BiH</a> -->
+
+				<!-- Contact Form -->
+				<form class="contact-form" action="https://formspree.io/f/mjkykjjb" method="POST">
+					<input type="email" id="contact_req_email" name="email" placeholder="Your e-mail" required>
+					<input type="text" id="contact_req_subject" name="subject" placeholder="Subject" required>
+					<textarea id="contact_req_message" name="message" placeholder="Your message" required></textarea>
+					<button id="send_button" type="submit">Send</button>
+				</form>	
+            </div> 		
         </section>
 
         <div class="image-box">
@@ -103,23 +112,25 @@
                 </div>
                 <div class="footer-right">
                     <!-- <a>Website made by</a>
-                    <span><a href="mailto:reba@hotmail.com" class="email-link">reba@hotmail.com</a></span> -->                
-                    <span><a href="mailto:speednetlog@gmail.com" class="email-link">speednetlog@gmail.com</a></span>
+                    <span><a href="mailto:reba@hotmail.com" class="email-link">reba@hotmail.com</a></span>               
+                    <span><a href="mailto:speednetlog@gmail.com" class="email-link">speednetlog@gmail.com</a></span> -->
+                    <a id="contact_addr"href="https://maps.app.goo.gl/gTQ72WN4UNa5DYbS6" target="_blank" style="color: white; text-decoration: none;">Address: Kneza Miloša 8/2, Bijeljina, BiH</a>
                 </div>
             </div>
 
             <!-- Mobile Version -->
             <div class="footer-mobile">
-                <div class="footer-bottom">
-                    <a href="tel:+38766794308" class="footer-left">+387&nbsp;66&nbsp;794&nbsp;308</a>
-                    <a href="mailto:speednetlog@gmail.com" class="footer-right email-link">speednetlog@gmail.com</a>
+                <div class="footer-center">
+                    <!-- <a href="tel:+38766794308" class="footer-left">+387&nbsp;66&nbsp;794&nbsp;308</a> -->
+                    <a href="tel:+38766794308">+387&nbsp;66&nbsp;794&nbsp;308</a>
+                    <!-- <a href="mailto:speednetlog@gmail.com" class="footer-right email-link">speednetlog@gmail.com</a> -->
                 </div>
                 <div class="footer-center">
                     <a style="color:#f6e277; font-size: 14px;">2025 SpeedNet Logistics®</a>
                 </div>
             </div>
         </div>
-    </footer>         
+    </footer>        
     
     <script>
         window.addEventListener("load", function () {
