--- a/index.html
+++ b/index.html
@@ -14,32 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Roboto&display=swap" rel="stylesheet">
 	
-    <script src="https://unpkg.com/lenis@1.2.3/dist/lenis.min.js"></script> 
-
-    <script>
-        // Define a map between local file paths and the desired URL paths
-        const hashToUrlMap = {
-            "index.html": "/home",
-            "index.html#solution": "/our-solutions",
-            "index.html#why": "/why-snl"
-        };
-
-        // Function to update the URL in the browser address bar
-        function updateUrl() {
-            const currentHash = window.location.hash; // e.g. #solution
-
-            // If the current hash matches a key in our map
-            if (hashToUrlMap[currentHash]) {
-                const newUrl = "https://speednetlogistics.com" + hashToUrlMap[currentHash];
-
-                // Use pushState to change the URL without reloading the page
-                window.history.pushState(null, null, newUrl);
-            }
-        }
-
-        // When the page loads, call the updateUrl function
-        window.onload = updateUrl;
-    </script>
+    <script src="https://unpkg.com/lenis@1.2.3/dist/lenis.min.js"></script>
 </head>
 <body>
     <div id="loader"></div>
@@ -103,7 +78,7 @@
         <section id="start" class="start">
             <div class="container">
                 <h1 id="start_h1"><span>Connect your business with the world</span></h1>
-                <p id="start_p1">It doesn't matter if you run a global powerhouse or local startup. We're here to help your business grow.</p>
+                <p id="start_p1" style="color: #f6e277;">It doesn't matter if you run a global powerhouse or local startup. We're here to help your business grow.</p>
             </div>    
         </section>            
         
@@ -229,23 +204,25 @@
                 </div>
                 <div class="footer-right">
                     <!-- <a>Website made by</a>
-                    <span><a href="mailto:reba@hotmail.com" class="email-link">reba@hotmail.com</a></span> -->                
-                    <span><a href="mailto:speednetlog@gmail.com" class="email-link">speednetlog@gmail.com</a></span>
+                    <span><a href="mailto:reba@hotmail.com" class="email-link">reba@hotmail.com</a></span>               
+                    <span><a href="mailto:speednetlog@gmail.com" class="email-link">speednetlog@gmail.com</a></span> -->
+                    <a id="contact_addr"href="https://maps.app.goo.gl/gTQ72WN4UNa5DYbS6" target="_blank" style="color: white; text-decoration: none;">Address: Kneza Miloša 8/2, Bijeljina, BiH</a>
                 </div>
             </div>
 
             <!-- Mobile Version -->
             <div class="footer-mobile">
-                <div class="footer-bottom">
-                    <a href="tel:+38766794308" class="footer-left">+387&nbsp;66&nbsp;794&nbsp;308</a>
-                    <a href="mailto:speednetlog@gmail.com" class="footer-right email-link">speednetlog@gmail.com</a>
+                <div class="footer-center">
+                    <!-- <a href="tel:+38766794308" class="footer-left">+387&nbsp;66&nbsp;794&nbsp;308</a> -->
+                    <a href="tel:+38766794308">+387&nbsp;66&nbsp;794&nbsp;308</a>
+                    <!-- <a href="mailto:speednetlog@gmail.com" class="footer-right email-link">speednetlog@gmail.com</a> -->
                 </div>
                 <div class="footer-center">
                     <a style="color:#f6e277; font-size: 14px;">2025 SpeedNet Logistics®</a>
                 </div>
             </div>
         </div>
-    </footer>    
+    </footer>
 
     <script>
         window.addEventListener("load", function () {
