contact/career forms go beyond box fix2

--- a/career.html
+++ b/career.html
@@ -79,8 +79,7 @@
         <section id="careers" class="careers">
             <div class="content-box">
                 <h1 id="cariera_h"><span>Career</span></h1>
-                <p id="cariera_p1">Looking for a new employment opportunity? Join our team!</p>
-                <p id="cariera_p2">For available positions, contact us!</p>                
+                <p id="cariera_p1">Looking for a new employment opportunity? Join our team! For available positions, contact us!</p>                
                 <!-- <a id="cariera_mail" href="mailto:speednetlog-career@gmail.com">Email: speednetlog-career@gmail.com</a>  
             </div>
 			
