--- a/index.html
+++ b/index.html
@@ -224,17 +224,17 @@
         </div>
     </footer>
 
-    <script>
-        if (window.location.pathname === "/index.html") {
+	<script>
+        if (window.location.pathname === "/index.html" || window.location.pathname === "/index.html#why" || window.location.pathname === "/index.html#solution") {
 			history.replaceState(null, "", "/home");
 		}
-    </script>
+	</script>
 	<script>
         window.addEventListener("load", function () {
         const loader = document.getElementById("loader");
         loader.classList.add("hidden");
         });
-    </script>
+	</script>
     <script src="./scripts.js"></script>
     <script src="./languages.js"></script>
 </body> 
